--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="G2P-DDM: Generating Sign Pose Sequence from Gloss Description with Discrete Diffusion Model">
+    <meta name="description" content="G2P-DDM: Generating Sign Pose Sequence from Gloss Sequence with Discrete Diffusion Model">
     <meta name="keywords" content="SLP, Video Synthesis">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>G2P-DDM: Generating Sign Pose Sequence from Gloss Description with Discrete Diffusion Model</title>
+    <title>G2P-DDM: Generating Sign Pose Sequence from Gloss Sequence with Discrete Diffusion Model</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="columns is-centered">
                     <div class="column has-text-centered">
-                        <h1 class="title is-2 publication-title">G2P-DDM: Generating Sign Pose Sequence from Gloss Description with Discrete Diffusion Model</h1>
+                        <h1 class="title is-2 publication-title">G2P-DDM: Generating Sign Pose Sequence from Gloss Sequence with Discrete Diffusion Model</h1>
                         <!-- <div class="is-size-5 publication-authors">
                             <span class="author-block">
                                 <a href="https://scholar.google.com/citations?user=DxPjkDoAAAAJ&hl=en">Yu
